fixed some landscape mode overlapping

--- a/src/styles/_breakpoint.scss
+++ b/src/styles/_breakpoint.scss
@@ -43,3 +43,8 @@ $breakpoint: (
     @content;
   }
 }
+@mixin landscape {
+  @media (orientation: landscape) {
+    @content;
+  }
+}
