--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -210,6 +210,11 @@ header {
                 transform: scale(1.05);
             }
         }
+
+        @include landscape {
+            justify-content: flex-start;
+            padding: 5rem;
+        }
     }
 
     @include lg {
@@ -249,6 +254,10 @@ header {
         margin: 0 auto;
         max-width: $maxWidth;
         padding: 0 2rem;
+
+        @include landscape {
+            height: auto;
+        }
         
         padding-top: 10rem;
         &__img {
@@ -337,7 +346,7 @@ header {
 
             @include md {
                 align-items: center;
-                text-align: center
+                text-align: center;
             }
         }
     }
